clusters/dextek/apps/rook-ceph/cluster/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.plexuz.xyz/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook-ceph-dashboard
  namespace: rook-ceph
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Rook"
    gethomepage.dev/instance: "krezh"
    gethomepage.dev/group: "Monitoring"
    gethomepage.dev/icon: "rook.png"
    gethomepage.dev/pod-selector: ""
spec:
  hostnames:
    - rook.talos.plexuz.xyz
  parentRefs:
    - name: gateway-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - kind: Service
          name: rook-ceph-mgr-dashboard
          port: 7000
